--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@ function formatSubmittedby(name) {
     .join(" ");
 }
 
-// === Load Current Job Info using File System Access API ===
+// === Load Current Job Ino using File System Access API ===
 let jobFileHandle = null; // store file handle between loads
 
 document.getElementById("jobInfoLabel").addEventListener("click", async () => {
